- Fixed on iOS portrait: the text in the email field was chopped off

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -254,7 +254,9 @@ aside.highlight
     box-sizing: border-box
     margin-top: 1px
     margin-bottom: 0.5em
+    font-size: 0.9em
     +at-breakpoint(30em 8)
+      font-size: 1em
       +span-columns(6, 8)
     +at-breakpoint(35em 9)
       +span-columns(7, 9)
